plugins {
    id("fabric-loom")
    id("maven-publish")
}

def mavenGroup = providers.gradleProperty("maven_group").get()
def modVersion = providers.gradleProperty("mod_version").get()
def archivesBaseName = providers.gradleProperty("archives_base_name").get()
def minecraftVersion = providers.gradleProperty("minecraft_version").get()
def yarnMappings = providers.gradleProperty("yarn_mappings").get()
def loaderVersion = providers.gradleProperty("loader_version").get()
def fabricVersion = providers.gradleProperty("fabric_version").get()

group = mavenGroup
version = modVersion

base {
    archivesName = "${archivesBaseName}-fabric"
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
    withSourcesJar()
}

repositories {
    mavenCentral()
    maven {
        name = 'Fabric'
        url = 'https://maven.fabricmc.net/'
    }
}

dependencies {
    minecraft("com.mojang:minecraft:${minecraftVersion}")
    mappings("net.fabricmc:yarn:${yarnMappings}:v2")

    modImplementation("net.fabricmc:fabric-loader:${loaderVersion}")
    modImplementation("net.fabricmc.fabric-api:fabric-api:${fabricVersion}")

    implementation("io.liparakis.chunkis:chunkis-core:3.0.0")
    include("io.liparakis.chunkis:chunkis-core:3.0.0")
    implementation("io.liparakis.chunkis:chunkis-cismigrator:1.0.0")
    include("io.liparakis.chunkis:chunkis-cismigrator:1.0.0")

    implementation("com.github.luben:zstd-jni:1.5.7-11")
    include("com.github.luben:zstd-jni:1.5.7-11")

    testImplementation("org.junit.jupiter:junit-jupiter:5.10.0")
    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
}

fabricApi {
    configureTests {
        createSourceSet = true
        modId = "chunkis-gametest"
        enableGameTests = true
        enableClientGameTests = false
    }
}

sourceSets {
    gametest {
        resources.srcDir(file("../cismigrator/src/test/resources"))
    }
}

processResources {
    inputs.property("version", project.version)
    inputs.property("minecraft_version", minecraftVersion)
    inputs.property("loader_version", loaderVersion)
    filteringCharset = "UTF-8"

    filesMatching("fabric.mod.json") {
        expand([
                version          : project.version,
                minecraft_version: minecraftVersion,
                loader_version   : loaderVersion,
        ])
    }
}

test {
    useJUnitPlatform()
}

tasks.named("runGameTest") {
    def filter = providers.gradleProperty("gametestFilter").orNull
    if (filter != null && !filter.isBlank()) {
        systemProperty("fabric-api.gametest.filter", filter)
    }
}
